added some styling, still have a timer bug to fix

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
         <script src="assets/javascript/app.js"></script>
+
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
 
@@ -12,13 +14,13 @@
 
             <div id="title"><h1>Animal Crossing Trivia</h1></div>
 
-            <div id="timer"></div>
+            <div id="timer"><h2>Let's start!</h2></div>
 
             <div id="question"></div>
 
             <div id="answers-holder">
                 <form id="answers">
-                    
+
                 </form>
             </div>
 
