--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="assets/javascript/app.js"></script>
 
         <link rel="stylesheet" href="assets/css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Sniglet" rel="stylesheet">
     </head>
     <body>
 
@@ -14,7 +15,7 @@
 
             <div id="title"><h1>Animal Crossing Trivia</h1></div>
 
-            <div id="timer"><h2>Let's start!</h2></div>
+            <div id="timer"><h2></h2></div>
 
             <div id="question"></div>
 
@@ -25,7 +26,7 @@
             </div>
 
             <div id="button-holder">
-                <button id="start">Start the Game</button>
+                <button class="start">Start the Game</button>
             </div>
 
         </div>
